# weather_app

./: README.md  app.py  pyproject.toml  weather.py
location/: gps.py  zipcode_lookup.py
src/: zipcode_lookup.py
static/css/: style.css
templates/: index.html
